2006-09-07  Mike Kelly  <pioto@gentoo.org>

	* NEWS: Prepare for 0.5.0.

	+ Release: 0.5.0

2006-09-07  Mike Kelly  <pioto@gentoo.org>

	* doc/: Restructure documentation.

2006-09-07  Mike Kelly  <pioto@gentoo.org>

	* bash/common/Makefile.am: Whoops, forgot to add get_profiledirs.bash.

2006-09-07  Mike Kelly  <pioto@gentoo.org>

	* configure.ac, doc/Makefile.am, Makefile.am: Update rules a bit for
	making docs.

2006-09-07  Mike Kelly  <pioto@gentoo.org>

	* bash/common/read_groupdata.bash.in,
	bash/common/read_userdata.bash.in,
	bash/common/get_profiledirs.bash.in: Add support for reading our data
	from cascading portage profiles, rather than just
	/var/lib/dynusers/data.

2006-08-27  Mike Kelly  <pioto@gentoo.org>

	* bash/db.bash.in, eselect/users.eselect.in: Clean up the code that
	loops over the database files.

	* bash/adduser.bash.in: Fix a typo.

2006-08-23  Mike Kelly  <pioto@gentoo.org>

	* bash/adduser.bash.in, bash/addgroup.bash.in: Add a check in the free
	uid/gid search step to find out if we already have the user or group
	with a uid/gid in the requested range. If so, we want to continue to
	use that uid/gid.

2006-08-23  Mike Kelly  <pioto@gentoo.org>

	* bash/db.bash.in: Error in my logic, should use && where I was using
	||.

2006-08-23  Mike Kelly  <pioto@gentoo.org>

	* bash/common/read_userdata.bash.in: Another "doh". ${USERFILE} !=
	${userfile}...

2006-08-23  Mike Kelly  <pioto@gentoo.org>

	* bash/common/read_groupdata.bash.in: Major "doh!". userid !=
	groupid...

2006-08-22  Mike Kelly  <pioto@gentoo.org>

	* bash/common/read_userdata.bash.in,
	bash/common/read_groupdata.bash.in: Fix a bug that caused all the
	values to end up being empty.

2006-08-22  Mike Kelly  <pioto@gentoo.org>

	* configure.ac, NEWS: Prepare for 0.4.2.

	+ Release: 0.4.2

2006-08-22  Mike Kelly  <pioto@gentoo.org>

	* bash/: Cleanup all our scripts here. Die in more places as
	appropriate, such as if we are totally unable to complete an action