@@ -28,8 +28,8 @@ directory in a cascading portage profile tree, and *USERNAME* is the name of the
 user being searched for. After cascading through all parents of *PROFILEDIR*
 looking for lower-priority ``acccounts/user/${USERNAME}`` file, any keys which
 are not yet determined then be looked up in the profile defaults file,
-``PROFILEDIR/accounts``, which contains all the default values for the keys.
-Again, it will be found by cascading through all parents of *PROFILEDIR*.
+``PROFILEDIR/accounts/defaults``, which contains all the default values for the
+keys.  Again, it will be found by cascading through all parents of *PROFILEDIR*.
 
 Users
 -----
@@ -94,7 +94,7 @@ And here is a sample file for foo's group, "foo"::
   # A sample group config file, for group "foo"
   gid: 1234
 
-Finally, here is a sample ``accounts`` file, which contains the default values::
+Finally, here is a sample ``defaults`` file, which contains the default values::
 
   # Default account settings for the glep27-user/group tools
   uid: 1-999
